# deepin-album

./: .gitignore  .project.json  CMakeLists.txt  README.md  README.zh_CN.md  album.pro  application.cpp  application.h  config.h.in  deepin-album.desktop  dtktest.h  install_dep  linglong.yaml  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
deepin-album/: CMakeLists.txt  deepin-album.desktop
deepin-album/album/: ac-desktop-define.h  accessibledefine.h  acobjectlist.h  application.cpp  application.h  dtktest.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
deepin-album/album/albumview/: albumimagebutton.cpp  albumimagebutton.h  albumview.cpp  albumview.h  leftlistview.cpp  leftlistview.h  leftlistwidget.cpp  waitdevicedialog.cpp  waitdevicedialog.h
deepin-album/album/allpicview/: allpicview.cpp  allpicview.h
deepin-album/album/controller/: commandline.cpp  configsetter.cpp  configsetter.h  dbusclient.cpp  dbusclient.h  divdbuscontroller.h  exporter.cpp  exporter.h  globaleventfilter.h  signalmanager.cpp  signalmanager.h  viewerthememanager.h  wallpapersetter.cpp  wallpapersetter.h
deepin-album/album/dbmanager/: DBandImgOperate.cpp  DBandImgOperate.h  DBandImgThreadManager.cpp  DBandImgThreadManager.h  dbmanager.cpp  dbmanager.h  dbmanager.pri
deepin-album/album/dialogs/: albumcreatedialog.cpp  albumcreatedialog.h  albumdeletedialog.cpp  albumdeletedialog.h  dialog.h
deepin-album/album/frame/: bottomtoolbar.h  extensionpanel.cpp  mainwidget.cpp  mainwidget.h  toptoolbar.cpp  toptoolbar.h  viewmainwindow.h
deepin-album/album/imageengine/: imageengine.pri  imageengineapi.cpp  imageengineapi.h  imageengineobject.cpp  imageengineobject.h  imageenginethread.cpp  imageenginethread.h
deepin-album/album/importtimelineview/: importtimelineview.cpp  importtimelineview.h
deepin-album/album/importview/: importview.cpp  importview.h
deepin-album/album/module/: modulepanel.h
deepin-album/album/searchview/: searchview.cpp  searchview.h
deepin-album/album/thumbnail/: mountthumbnaillistview.cpp  mountthumbnaillistview.h  thumbnaildelegate.cpp  thumbnaildelegate.h  thumbnaillistview.cpp  thumbnaillistview.h
deepin-album/album/utils/: baseutils.cpp  (+6 more)
deepin-album/debian/: copyright  rules
deepin-album/deprecated/: imagewidget.cpp  imagewidget.h  mountthumbnaillistview.cpp  printoptionspage.cpp  printoptionspage.h
deepin-album/lib/: libUnionImage.so.1.0  libUnionImage.so.1.0.0
deepin-album/tests/: CMakeLists.txt  test_albumview.cpp  test_albumview.h  test_application.cpp  test_mainwindow.cpp  test_qtestDefine.h  test_qtestmain.cpp
deepin-album/translations/: deepin-album.qm  deepin-album.ts  deepin-album_ca.qm  deepin-album_cs.ts  deepin-album_da.ts  deepin-album_de.qm  deepin-album_de.ts  deepin-album_es.qm  deepin-album_fi.qm  deepin-album_fr.qm  deepin-album_hu.qm  deepin-album_hu.ts  deepin-album_it.qm  deepin-album_ko.qm  deepin-album_ms.qm  deepin-album_nl.ts  deepin-album_pt.qm  deepin-album_pt_BR.qm  deepin-album_pt_BR.ts  deepin-album_sq.qm  deepin-album_tr.ts  deepin-album_uk.qm  deepin-album_uk.ts  deepin-album_zh_CN.qm  deepin-album_zh_CN.ts
libUnionImage/: CMakeLists.txt
libUnionImage/ImageDemo/: imagedemothread.h  mainwindow.h  moviegraphicsitem.h
libUnionImage/UnionImage/: unionimage.cpp  unionimage.h
src/: CMakeLists.txt  album.pro  deepin-album.desktop  deepin-album.qrc  launcherplugin.cpp  main.cpp  res.qrc
src/album/: ac-desktop-define.h  accessible.h  accessibledefine.h  accessiblefunctions.h  acobjectlist.h  albumgloabl.h  application.cpp  application.h  dtktest.cpp  dtktest.h  fileinotify.cpp  fileinotify.h  fileinotifygroup.cpp  fileinotifygroup.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
src/deprecated/: imageinfowidget.cpp  imageinfowidget.h  imagewidget.h
src/icons/: icons.qrc
src/qml/: AlbumTitle.qml  BottomBar.qml  GlobalVar.qml  HaveImportedDelegate.qml  HaveImportedView.qml  ImportView.qml  MainAlbumView.qml  MenuItemStates.qml  NewAlbumDialog.qml  RubberBand.qml  Sidebar.qml  SidebarModel.qml  StackControl.qml  StatusBar.qml  ThumbnailImage.qml  main.qml
src/src/: albumControl.cpp  albumControl.h  albumgloabl.h  configsetter.cpp  configsetter.h  cursortool.cpp  filecontrol.cpp  filecontrol.h  globalcontrol.cpp  globalcontrol.h  globalstatus.cpp  globalstatus.h  qmlWidget.cpp  qmlWidget.h  thumbnailload.cpp  thumbnailload.h  types.cpp  types.h
src/translations/: deepin-album.ts  deepin-album_ady.ts  deepin-album_af.ts  deepin-album_ak.ts  deepin-album_am_ET.ts  deepin-album_ar.ts  deepin-album_ast.ts  deepin-album_az.ts  deepin-album_bg.ts  deepin-album_bn.ts  deepin-album_bo.ts  deepin-album_bqi.ts  deepin-album_br.ts  deepin-album_ca.ts  deepin-album_cs.ts  deepin-album_da.ts  deepin-album_de.ts  deepin-album_el.ts  deepin-album_en_AU.ts  deepin-album_en_CA.ts  deepin-album_en_GB.ts  deepin-album_eo.ts  deepin-album_es.ts  deepin-album_et.ts  deepin-album_eu.ts  deepin-album_fa.ts  deepin-album_fa_IR.ts  deepin-album_fi.ts  deepin-album_fil.ts  deepin-album_fr.ts  deepin-album_gl_ES.ts  deepin-album_he.ts  deepin-album_hi_IN.ts  deepin-album_hr.ts  deepin-album_hu.ts  deepin-album_hy.ts  deepin-album_ia.ts  deepin-album_id.ts  deepin-album_it.ts  deepin-album_ja.ts  (+46 more)
tests/: CMakeLists.txt  main.cpp  test-prj-running.sh  test_application.cpp  test_mainwindow.cpp  test_qtestDefine.h  test_qtestmain.cpp  test_unioniamge.cpp  testtoolkits.cpp  testtoolkits.h
tests/CI/: lcov.sh
tests/albumview/: mock_mount.cpp  mock_mount.h  test_albumview.cpp  test_importtimelineview.cpp
tests/allpicview/: test_allpicview.cpp  test_searchview.cpp  test_slideshow.cpp
tests/controller/: test_commandline.cpp  test_exporter.cpp  test_wallpapersetter.cpp
tests/dbmanager/: test_dbmanager.cpp
tests/dialogs/: test_dialogs.cpp
tests/importview/: test_importview.cpp
tests/thumbnail/: test_thumbnaillistview.cpp
tests/timelineview/: test_timelineview.cpp
tests/utils/: test_baseutils.cpp
tests/widgets/: test_albumlefttabitem.cpp  test_cexportimagedialog.cpp  test_imagebutton.cpp  test_printhelper.cpp
(+783 files in other folders)
